<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <TextView
      android:id="@+id/filename_text"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:textColor="#000000"
      android:background="#aaaaaa"
      />
  <TextView
      android:id="@+id/duration_text"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:background="#0000ff"
      android:gravity="center"
      />

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:id="@+id/actual_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/left_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textSize="20sp"
        />
  </LinearLayout>

  <Button
      android:id="@+id/sleep"
      android:onClick="setSleep"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:text="@string/sleep" />
  <Button
      android:id="@+id/playPause"
      android:onClick="playPause"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:text="@string/playPause" />
  <Button
      android:id="@+id/forwardButton"
      android:onClick="seekForward"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:text="@string/forwardButton" />
  <Button
      android:id="@+id/backwardButton"
      android:onClick="seekBackward"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:text="@string/backwardButton" />

  <CheckBox
      android:id="@+id/volumeBoost"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:text="@string/volumeBoost"
      android:textSize="20sp"
      android:onClick="onVolumeBoost"/>
</LinearLayout>

